# resultx

./: README.md  pyproject.toml
resultx/: __init__.py  __main__.py  decorator.py  result.py
