[tool.poetry]
name = "resultx"
version = "2020.5"
description = "Automatically wraps exceptions and returned data in a result structure."
authors = ["Andrew Spittlemeister <andrew.spittlemeister@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
